fix line spacing on text box

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -45,8 +45,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
     position: relative;
     transition: transform 1s;
     transform-style: preserve-3d;
@@ -132,6 +130,7 @@ body {
 .text-bubble p {
     margin-top: 0;
     margin-bottom: 0;
+    line-height: 1.75em;
 }
 
 .text-bubble span {
